# bili-music

./: .gitignore  AGENTS.md  Cargo.toml  README.md
design/: bili_music_design_v2.html  mascot-concepts.html  午夜黑胶设计规范.md
src/: lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  appearance.rs  guest_playurl.rs  library.rs  lyrics.rs  main.rs  ranking.rs  search.rs  wbi.rs
ui/: appearance.js  index.html  lyrics.js  main.js  mascot.js  styles.css  window-controls.js
