[package]
name = "bili-music"
version = "0.2.0"
edition = "2021"
default-run = "bili-music"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
axum = "0.8"
base64 = "0.22"
bilibili-music-core = { path = ".." }
html-escape = "0.2"
image = { version = "0.25", default-features = false, features = ["bmp", "jpeg", "png", "webp"] }
md5 = "0.8"
percent-encoding = "2"
reqwest = { version = "0.13", features = ["json", "stream"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["net", "sync"] }
uuid = { version = "1", features = ["v4"] }
